--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "AndroidUtils"
 include ':app'
-include ':app:fileutility'
+include ':fileutils'
