App Permission module and Location module added

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ rootProject.name = "AndroidUtils"
 include ':app'
 include ':fileutils'
 include ':camerahelper'
+include ':locationhelper'
+include ':permissions'
