--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_SMS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -43,6 +44,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileUtility"
         tools:targetApi="31">
+        <activity
+            android:name=".imageutils.ImageUtilsDemoActivity"
+            android:exported="false" />
         <activity
             android:name=".smsutils.SMSDemoActivity"
             android:exported="false" />
