--- a/.github/workflows/publish_packages.yml
+++ b/.github/workflows/publish_packages.yml
@@ -1,11 +1,16 @@
-name: Android CI
+name: Publish package to GitHub Packages
 
-on: workflow_dispatch
+on:
+  workflow_dispatch
+  release:
+    types: [created]
 
 jobs:
-  build:
-
+  publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
     - uses: actions/checkout@v3
@@ -20,3 +25,5 @@ jobs:
       run: chmod +x gradlew
     - name: publish
       run: ./gradlew publish
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
