--- a/barcodescanner/build.gradle
+++ b/barcodescanner/build.gradle
@@ -1,10 +1,8 @@
 plugins {
     id 'com.android.library'
-    id 'maven-publish'
 }
 
 group = 'com.github.geofriendtech'
-
 
 android {
     namespace 'in.geofriend.barcodescanner'
@@ -14,8 +12,13 @@ android {
         minSdk 21
         targetSdk 33
 
+        aarMetadata {
+            minCompileSdk = 21
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
     }
 
     buildTypes {
@@ -30,6 +33,31 @@ android {
     }
 }
 
+def bundleReleaseTaskName = tasks.findByName('bundleRelease')?.name ?: 'bundleRelease'
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.github.geofriendtech'
+            artifactId = 'barcodescanner'
+            version = '1.0'
+
+            from components.findByName('release')
+        }
+    }
+    repositories {
+        maven {
+            name = 'geofriend'
+            url = "${project.buildDir}/repo"
+        }
+    }
+}
+
+afterEvaluate {
+    publishing.publications.maven.artifact(bundleReleaseTaskName) {
+        builtBy(bundleReleaseTaskName)
+    }
+}
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
