--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation project(path: ':imageutils')
     implementation project(path: ':logutils')
     implementation project(path: ':barcodescanner')
+    implementation project(path: ':appdatamanager')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
