--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -43,6 +42,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FileUtility"
         tools:targetApi="31">
+        <activity
+            android:name=".appdatamanager.AppDataManagerActivity"
+            android:exported="false" />
         <activity
             android:name=".codescanner.CodeScannerActivity"
             android:exported="false" />
@@ -59,7 +61,7 @@
             android:name=".camera.CameraActivity"
             android:exported="false" />
         <activity
-            android:name="in.geofriend.androidutils.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
