--- a/logger/build.gradle
+++ b/logger/build.gradle
@@ -2,8 +2,30 @@ plugins {
     id 'com.android.library'
 }
 
+def libraryOutputName(String variantName) {
+    "logger-1.0-${variantName}.aar"
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'io.github.geofriendtech'
+            artifactId = 'logger'
+            version = '1.0'
+//            from components.release
+        }
+    }
+
+    repositories {
+        maven {
+            name = 'myrepo'
+            url = "${project.buildDir}/repo"
+        }
+    }
+}
+
 android {
-    namespace 'com.madgicaltechdom.logger'
+    namespace 'io.github.geofriendtech.logger'
     compileSdk 33
 
     defaultConfig {
@@ -20,6 +42,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    libraryVariants.all { variant ->
+        variant.outputs.all { output ->
+            if (outputFileName.endsWith('.aar')) {
+                outputFileName = libraryOutputName(variant.name)
+            }
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
