--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
+
+buildscript {
+    ext.kotlin_version = "1.3.72"
+    repositories {
+        google()
+        mavenCentral() // NEW
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.13.0' // NEW
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.4.10.2' // NEW
+    }
+}
+
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id "maven-publish"
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    id 'signing'
 }
 
 tasks.register('generateRepo', Zip) {
-    def publishTask = tasks.named('publishReleasePublicationToGeofriendRepository')
+    def publishTask = tasks.named('publishReleasePublicationToMyrepoRepository')
     from publishTask.map { it.getRepository().getUrl() }
     into 'mylibrary'
     archiveFileName.set('mylibrary.zip')
