--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
+VERSION_NAME=2.0.2
+VERSION_CODE=11
