--- a/imageutils/build.gradle
+++ b/imageutils/build.gradle
@@ -3,6 +3,29 @@ plugins {
 }
 group = 'com.github.geofriendtech'
 
+def libraryOutputName(String variantName) {
+    "imageutils-1.0-${variantName}.aar"
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'io.github.geofriendtech'
+            artifactId = 'imageutils'
+            version = '1.0'
+//            from components.release
+        }
+    }
+
+    repositories {
+        maven {
+            name = 'myrepo'
+            url = "${project.buildDir}/repo"
+        }
+    }
+}
+
+
 android {
     compileSdk 33
 
@@ -27,33 +50,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    namespace 'in.geofriend.imageutils'
-}
-
-def bundleReleaseTaskName = tasks.findByName('bundleRelease')?.name ?: 'bundleRelease'
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = 'com.github.geofriendtech'
-            artifactId = 'imageutils'
-            version = '1.0'
-
-            from components.findByName('release')
-        }
-    }
-    repositories {
-        maven {
-            name = 'geofriend'
-            url = "${project.buildDir}/repo"
-        }
-    }
-}
-
-afterEvaluate {
-    publishing.publications.maven.artifact(bundleReleaseTaskName) {
-        builtBy(bundleReleaseTaskName)
-    }
+    namespace 'io.github.geofriendtech.imageutils'
 }
 
 dependencies {
