--- a/smsutils/build.gradle
+++ b/smsutils/build.gradle
@@ -1,7 +1,30 @@
 plugins {
     id 'com.android.library'
 }
-group = 'com.github.geofriendtech'
+group = 'io.github.geofriendtech'
+
+def libraryOutputName(String variantName) {
+    "smsutils-1.0-${variantName}.aar"
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'io.github.geofriendtech'
+            artifactId = 'smsutils'
+            version = '1.0'
+//            from components.release
+        }
+    }
+
+    repositories {
+        maven {
+            name = 'myrepo'
+            url = "${project.buildDir}/repo"
+        }
+    }
+}
+
 
 android {
     compileSdk 33
@@ -26,33 +49,15 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    namespace 'in.geofriend.smsutils'
-}
 
-def bundleReleaseTaskName = tasks.findByName('bundleRelease')?.name ?: 'bundleRelease'
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = 'com.github.geofriendtech'
-            artifactId = 'smsutils'
-            version = '1.0'
-
-            from components.findByName('release')
+    libraryVariants.all { variant ->
+        variant.outputs.all { output ->
+            if (outputFileName.endsWith('.aar')) {
+                outputFileName = libraryOutputName(variant.name)
+            }
         }
     }
-    repositories {
-        maven {
-            name = 'geofriend'
-            url = "${project.buildDir}/repo"
-        }
-    }
-}
-
-afterEvaluate {
-    publishing.publications.maven.artifact(bundleReleaseTaskName) {
-        builtBy(bundleReleaseTaskName)
-    }
+    namespace 'io.github.geofriend.smsutils'
 }
 
 dependencies {
