--- a/barcodescanner/build.gradle
+++ b/barcodescanner/build.gradle
@@ -9,7 +9,7 @@ def libraryOutputName(String variantName) {
     "barcodescanner-1.0-${variantName}.aar"
 }
 
-publishing {
+/*publishing {
     publications {
         release(MavenPublication) {
             groupId = 'io.github.geofriendtech'
@@ -28,7 +28,7 @@ publishing {
             url = "${project.buildDir}/repo"
         }
     }
-}
+}*/
 
 android {
     namespace 'io.github.geofriendtech.barcodescanner'
@@ -86,3 +86,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+apply from: '../publish-package.gradle'
