--- a/camerahelper/build.gradle
+++ b/camerahelper/build.gradle
@@ -9,7 +9,7 @@ def libraryOutputName(String variantName) {
     "camerahelper-1.0-${variantName}.aar"
 }
 
-publishing {
+/*publishing {
     publications {
         release(MavenPublication) {
             groupId = 'io.github.geofriendtech'
@@ -25,7 +25,7 @@ publishing {
             url = "${project.buildDir}/repo"
         }
     }
-}
+}*/
 
 
 android {
@@ -79,3 +79,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+apply from: '../publish-package.gradle'
