--- a/logutils/build.gradle
+++ b/logutils/build.gradle
@@ -28,12 +28,19 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+        }
+    }
+
     namespace 'in.geofriend.logutils'
 }
 
 def bundleReleaseTaskName = tasks.findByName('bundleRelease')?.name ?: 'bundleRelease'
 
-publishing {
+/*publishing {
     publications {
         maven(MavenPublication) {
             groupId = 'com.github.geofriendtech'
@@ -49,13 +56,8 @@ publishing {
             url = "${project.buildDir}/repo"
         }
     }
-}
+}*/
 
-afterEvaluate {
-    publishing.publications.maven.artifact(bundleReleaseTaskName) {
-        builtBy(bundleReleaseTaskName)
-    }
-}
 
 dependencies {
 
@@ -66,3 +68,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+apply from: '../publish-package.gradle'
