--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@
 buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
+        mavenLocal()
         google()
         mavenCentral() // NEW
     }
