--- a/locationhelper/build.gradle
+++ b/locationhelper/build.gradle
@@ -59,12 +59,19 @@ android {
             }
         }
     }
+
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+        }
+    }
+
     namespace 'io.github.geofriendtech.locationhelper'
 }
 
 def bundleReleaseTaskName = tasks.findByName('bundleRelease')?.name ?: 'bundleRelease'
 
-publishing {
+/*publishing {
     publications {
         maven(MavenPublication) {
             groupId = 'com.github.geofriendtech'
@@ -80,13 +87,8 @@ publishing {
             url = "${project.buildDir}/repo"
         }
     }
-}
+}*/
 
-afterEvaluate {
-    publishing.publications.maven.artifact(bundleReleaseTaskName) {
-        builtBy(bundleReleaseTaskName)
-    }
-}
 
 dependencies {
 
@@ -96,3 +98,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+apply from: '../publish-package.gradle'
