--- a/publish-package.gradle
+++ b/publish-package.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'maven-publish'
+apply plugin: 'signing'
 
 task androidJavadoc(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
@@ -43,14 +44,14 @@ afterEvaluate {
 
                 from components.release
 
-                artifact androidJavadocJar
-                artifact javaSourcesJar
+//                artifact androidJavadocJar
+//                artifact javaSourcesJar
 
                 groupId 'io.github.geofriendtech'
-                version '1.0'
+                version '1.0.0-SNAPSHOT'
                 pom {
                     name = artifactId
-                    description = ''
+                    description = POM_DESCRIPTION
                     url = ''
                     licenses {
                         license {
@@ -59,18 +60,52 @@ afterEvaluate {
                         }
                     }
                     scm {
-                        connection = ''
-                        url = ''
+                        connection = 'scm:git@github.com:geofriendtech/AndroidUtils.git'
+                        url = 'https://github.com/GeofriendTech/AndroidUtils.git'
                     }
                     developers {
                         developer {
-                            id = ''
-                            name = ''
-                            email = ''
+                            id = POM_DEVELOPER_ID
+                            name = POM_DEVELOPER_NAME
+                            email = POM_DEVELOPER_EMAIL
                         }
                     }
                 }
             }
         }
+        repositories {
+            maven {
+                name = "SonatypeSnapshot"
+
+//                def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+//                def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+//                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+                url = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+
+                credentials {
+                    username ossrhUsername
+                    password ossrhPassword
+                }
+            }
+
+            maven {
+                name = "sonatype"
+
+//                def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+//                def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+//                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+                url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+
+                credentials {
+                    username ossrhUsername
+                    password ossrhPassword
+                }
+            }
+        }
     }
 }
+
+signing {
+    sign publishing.publications
+}
+
