gradle.properties updated

--- a/gradle.properties
+++ b/gradle.properties
@@ -37,3 +37,5 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=vkvashistha
 POM_DEVELOPER_NAME=GeofriendTech
 POM_DEVELOPER_EMAIL=vkvashistha@gmail.com
+ossrhUsername=''
+ossrhPassword=''
