--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,8 +23,8 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew check -x lint 
+    - name: Build APK
+      run: bash ./gradlew assembleDebug --stacktrace
       
     - name: Upload app APK
       uses: actions/upload-artifact@v1
